# xad-forge

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: ci.yaml
cmake/: xad-forge-config.cmake.in
docs/: benchmarks.md
include/xad-forge/: ForgeBackend.hpp  ForgeBackendAVX.hpp  ForgeBackendAVX_CAPI.hpp  ForgeBackendCAPI.hpp  ForgeBackendCommon.hpp  ForgeBackends.hpp
samples/: CMakeLists.txt
samples/jit_tutorial/: CMakeLists.txt  README.md  main.cpp
tests/: CMakeLists.txt  avx_backend_test.cpp  capi_backend_test.cpp  forgebackend_test.cpp  scalar_backend_test.cpp
