##############################################################################
#
#  xad-forge samples
#
#  Sample executables demonstrating xad-forge usage:
#    - jit_tutorial: Branching and graph reuse with ForgeBackend
#
##############################################################################

add_subdirectory(jit_tutorial)
