##############################################################################
#
#  xad-forge samples
#
#  Sample executables demonstrating xad-forge usage:
#    - jit_tutorial: Branching and graph reuse with ForgeBackend
#
#  Copyright (c) 2025 The xad-forge Authors
#  SPDX-License-Identifier: Zlib
#
##############################################################################

add_subdirectory(jit_tutorial)
